--- a/pages/18331.html
+++ b/pages/18331.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -339,7 +339,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -453,9 +453,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -493,7 +521,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -652,12 +680,12 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Given a <a class='existingWikiWord' href='/nlab/show/separable+Hilbert+space'>separable Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>, such as the <a class='existingWikiWord' href='/nlab/show/sequence+space'>sequence space</a> <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝓁</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathcal{l}_2</annotation></semantics></math>, write <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>B(\mathcal{H})</annotation></semantics></math> for its <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a> of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded linear operators</a> and <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>D(\mathcal{H})</annotation></semantics></math> for the subalgebra of diagonal operators.</p>
+<p>Given a <a class='existingWikiWord' href='/nlab/show/separable+Hilbert+space'>separable Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>, such as the <a class='existingWikiWord' href='/nlab/show/sequence+space'>sequence space</a> <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>𝓁</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathcal{l}_2</annotation></semantics></math>, write <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>B(\mathcal{H})</annotation></semantics></math> for its <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a> of <a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded linear operators</a> and <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>D(\mathcal{H})</annotation></semantics></math> for the subalgebra of diagonal operators.</p>
 
 <p>The <em>Kadison-Singer problem</em> is the question:</p>
 
-<p><em>Does every <a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a> <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>D(\mathcal{H})</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/extension'>extend</a> to a <a class='existingWikiWord' href='/nlab/show/state'>state</a> <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ρ</mi></mrow><annotation encoding='application/x-tex'>\rho</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>B(\mathcal{H})</annotation></semantics></math>?</em></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_24d02a01df2d09a55f9b027b3c5e9ac6e5778ea3_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>D</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>ψ</mi></mover></mtd> <mtd><mi>ℂ</mi></mtd></mtr> <mtr><mtd><mo stretchy='false'>↓</mo></mtd> <mtd><msub><mo>↗</mo> <mpadded width='0'><mrow><mo>∃</mo><mi>ρ</mi></mrow></mpadded></msub></mtd></mtr> <mtr><mtd><mi>B</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<p><em>Does every <a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a> <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>D(\mathcal{H})</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/extension'>extend</a> to a <a class='existingWikiWord' href='/nlab/show/state'>state</a> <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ρ</mi></mrow><annotation encoding='application/x-tex'>\rho</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>B(\mathcal{H})</annotation></semantics></math>?</em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3ae45cd5341d5abc9c52010c353401c14d3a0d4f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>D</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mtd> <mtd><mover><mo>⟶</mo><mi>ψ</mi></mover></mtd> <mtd><mi>ℂ</mi></mtd></mtr> <mtr><mtd><mo stretchy='false'>↓</mo></mtd> <mtd><msub><mo>↗</mo> <mpadded width='0'><mrow><mo>∃</mo><mi>ρ</mi></mrow></mpadded></msub></mtd></mtr> <mtr><mtd><mi>B</mi><mo stretchy='false'>(</mo><mi>ℋ</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
      D(\mathcal{H}) &amp;\overset{\psi}{\longrightarrow}&amp; \mathbb{C}
      \\
@@ -671,8 +699,46 @@ margin-left: 0em;
 
 <h2 id='related_entries'>Related entries</h2>
 
+<p>Other theorems about the foundations and <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a> include:</p>
+
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfsen-Shultz+theorem'>Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -697,14 +763,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on June  3, 2017 04:30:49 
+  Revised on December 11, 2017 08:47:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.6.236.87)
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kadison-Singer+problem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Kadison-Singer+problem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kadison-Singer+problem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Kadison-Singer+problem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kadison-Singer+problem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
