--- a/pages/4272.html
+++ b/pages/4272.html
@@ -355,7 +355,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>in AQFT and operator algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>in AQFT and operator algebra</a></p>
 </li>
 
 <li>
@@ -423,9 +423,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -463,7 +491,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -1203,39 +1231,83 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Fell’s theorem is about a property of vector <a class='existingWikiWord' href='/nlab/show/state'>states</a> of a <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C-star algebra</a>, it says that if the kernels of two representations of the algebra coincide, then the vector <a class='existingWikiWord' href='/nlab/show/state'>states</a> are mutually weak-* dense. This has a profound consequence for the <a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a> interpretation: A state represents the physical state of a physical system. Since one can always only perform a finite number of measurements, with a finite precision, it is only possible to determine a weak-* neigborhood of a given state. This means that it is not possible - not even in principle - to distinguish representations with coinciding kernels by measurements.</p>
+<p>Fell’s theorem is about a property of vector <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>states</a> of a <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C-star algebra</a>, it says that if the kernels of two representations of the algebra coincide, then the vector <a class='existingWikiWord' href='/nlab/show/state'>states</a> are mutually weak-* dense. This has a profound consequence for the <a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a> interpretation: A state represents the physical state of a physical system. Since one can always only perform a finite number of measurements, with a finite precision, it is only possible to determine a weak-* neigborhood of a given state. This means that it is not possible - not even in principle - to distinguish representations with coinciding kernels by measurements.</p>
 
 <p>For this reason representations with coinciding kernels are sometimes called <strong>physically equivalent</strong> in the <a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a> literature.</p>
 
 <h2 id='properties'>Properties</h2>
 
-<p>Let A be a unital <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup><mo lspace='verythinmathspace' rspace='0em'>−</mo></mrow><annotation encoding='application/x-tex'>C^*-</annotation></semantics></math>algebra and <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>π</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_1, \pi_2</annotation></semantics></math> be two representations of A on a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> H.</p>
+<p>Let A be a unital <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup><mo lspace='verythinmathspace' rspace='0em'>−</mo></mrow><annotation encoding='application/x-tex'>C^*-</annotation></semantics></math>algebra and <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>π</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_1, \pi_2</annotation></semantics></math> be two representations of A on a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> H.</p>
 
 <div class='un_theorem'>
 <h6 id='theorem'>Theorem</h6>
 
-<p><strong>equivalence theorem</strong> Every vector state of <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_1</annotation></semantics></math> is the weak-* limit of vector states of <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_2</annotation></semantics></math> iff the kernel of <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_1</annotation></semantics></math> contains the kernel of <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_2</annotation></semantics></math>.</p>
+<p><strong>equivalence theorem</strong> Every vector state of <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_1</annotation></semantics></math> is the weak-* limit of vector states of <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_2</annotation></semantics></math> iff the kernel of <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_1</annotation></semantics></math> contains the kernel of <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\pi_2</annotation></semantics></math>.</p>
 </div>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<p>Other theorems about the foundations and <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a> include:</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfsen-Shultz+theorem'>Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>J.G.M. Fell: <em>The Dual Spaces of <math class='maruku-mathml' display='inline' id='mathml_1721bb767f263801b89a2e594c6e0aba16072251_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebras</em> <a href='http://www.ams.org/journals/tran/1960-094-03/S0002-9947-1960-0146681-0/S0002-9947-1960-0146681-0.pdf'>online available here</a></li>
+<li>J.G.M. Fell: <em>The Dual Spaces of <math class='maruku-mathml' display='inline' id='mathml_2eeb384bee6282e27b81c2da6039b85c68b8871d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^*</annotation></semantics></math>-algebras</em> <a href='http://www.ams.org/journals/tran/1960-094-03/S0002-9947-1960-0146681-0/S0002-9947-1960-0146681-0.pdf'>online available here</a></li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on June 17, 2011 09:27:32 
+  Revised on December 11, 2017 08:45:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.83)
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fell%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fell%27s+theorem/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Fell%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fell%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fell%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fell%27s+theorem/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Fell%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fell%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
