--- a/pages/6285.html
+++ b/pages/6285.html
@@ -319,9 +319,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -359,7 +387,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -518,7 +546,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#statement'>Statement</a></li><li><a href='#role_in_quantum_mechanics'>Role in quantum mechanics</a></li><li><a href='#related_theorems'>Related theorems</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='statement'>Statement</h2>
 
-<p>Wigner’s theorem asserts that a <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_1424f59bca5afa77c809e6da443b642acef58c45_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>f : H \to H</annotation></semantics></math> from a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> to itself (not <em>assumed</em> to be a <a class='existingWikiWord' href='/nlab/show/linear+functor'>linear functor</a>)<br/>is linear and in fact a (anti-)<a class='existingWikiWord' href='/nlab/show/unitary+operator'>unitary operator</a> (up to a phase) if only the function is</p>
+<p>Wigner’s theorem asserts that a <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_65d0cf6c029b0cddc1fcd422af23bc6e1e3d56db_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>f : H \to H</annotation></semantics></math> from a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> to itself (not <em>assumed</em> to be a <a class='existingWikiWord' href='/nlab/show/linear+functor'>linear functor</a>)<br/>is linear and in fact a (anti-)<a class='existingWikiWord' href='/nlab/show/unitary+operator'>unitary operator</a> (up to a phase) if only the function is</p>
 
 <ol>
 <li>
@@ -536,17 +564,13 @@ margin-left: 0em;
 
 <h2 id='related_theorems'>Related theorems</h2>
 
-<p>Other theorems on the foundations and <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a> include:</p>
+<p>Other theorems about the foundations and <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a> include:</p>
 
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
-</li>
-
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
 </li>
@@ -562,7 +586,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner&#39;s theorem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
 </li>
 
 <li>
@@ -571,6 +599,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
 </li>
 </ul>
 
@@ -587,14 +619,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 11, 2014 13:12:37 
+  Revised on December 11, 2017 08:48:07 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.199)
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wigner+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wigner+theorem/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Wigner+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wigner+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wigner+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wigner+theorem/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Wigner+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wigner+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
