--- a/pages/7162.html
+++ b/pages/7162.html
@@ -339,7 +339,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -452,13 +452,13 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_theorems'>Related theorems</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The theorem of (<a href='#AlfsenShultz78'>Alfsen-Shultz 78</a>) says that two <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebras</a> have <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphic</a> <a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>state spaces</a> precisely if as <a class='existingWikiWord' href='/nlab/show/Jordan+algebra'>Jordan algebras</a> they are isomorphic.</p>
+<p>The theorem of (<a href='#AlfsenShultz78'>Alfsen-Shultz 78</a>) says that two <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebras</a> have <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphic</a> <a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state spaces</a> precisely if as <a class='existingWikiWord' href='/nlab/show/Jordan+algebra'>Jordan algebras</a> they are isomorphic.</p>
 
 <p>This is to some extent a <a class='existingWikiWord' href='/nlab/show/Jordan+algebra'>Jordan algebra</a>-analog of the <a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark+theorem'>Gelfand-Naimark theorem</a>.</p>
 
 <h2 id='related_theorems'>Related theorems</h2>
 
-<p>Other theorems on the foundations and <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a> include</p>
+<p>Other theorems about the foundations and <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a> include:</p>
 
 <ul>
 <li>
@@ -470,13 +470,17 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
 </li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
 </li>
 
 <li>
@@ -490,6 +494,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -500,26 +508,26 @@ margin-left: 0em;
 </li>
 
 <li>
-<p id='AlfsenHOShultz80'><a class='existingWikiWord' href='/nlab/show/Erik+Alfsen'>Erik Alfsen</a>, H. Hanche-Olsen, <a class='existingWikiWord' href='/nlab/show/Frederic+Shultz'>Frederic Shultz</a>, <em>State spaces of <math class='maruku-mathml' display='inline' id='mathml_f761ccf3724bf9db8720bbda074a0706694d08e6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^\ast</annotation></semantics></math>-algebras</em>, Acta Math., 144 (1980), 267-305.</p>
+<p id='AlfsenHOShultz80'><a class='existingWikiWord' href='/nlab/show/Erik+Alfsen'>Erik Alfsen</a>, H. Hanche-Olsen, <a class='existingWikiWord' href='/nlab/show/Frederic+Shultz'>Frederic Shultz</a>, <em>State spaces of <math class='maruku-mathml' display='inline' id='mathml_467779b9ce0e5c195076b4bbcea3a5821c897b7d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^\ast</annotation></semantics></math>-algebras</em>, Acta Math., 144 (1980), 267-305.</p>
 </li>
 </ul>
 
 <p>See also</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Frederic+Shultz'>Frederic Shultz</a>, <em>Dual maps of Jordan homomorphisms and ∗-homomorphisms between <math class='maruku-mathml' display='inline' id='mathml_f761ccf3724bf9db8720bbda074a0706694d08e6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^\ast</annotation></semantics></math>-algebras</em>, Pacific J. Math. Volume 93, Number 2 (1981), 435-441 (<a href='http://projecteuclid.org/euclid.pjm/1102736271'>Euclid</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Frederic+Shultz'>Frederic Shultz</a>, <em>Dual maps of Jordan homomorphisms and ∗-homomorphisms between <math class='maruku-mathml' display='inline' id='mathml_467779b9ce0e5c195076b4bbcea3a5821c897b7d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>C^\ast</annotation></semantics></math>-algebras</em>, Pacific J. Math. Volume 93, Number 2 (1981), 435-441 (<a href='http://projecteuclid.org/euclid.pjm/1102736271'>Euclid</a>)</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on January 11, 2014 13:11:23 
+  Revised on December 11, 2017 08:48:54 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.199)
+  (178.6.238.60)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alfsen-Shultz+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alfsen-Shultz+theorem/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Alfsen-Shultz+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alfsen-Shultz+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Alfsen-Shultz+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alfsen-Shultz+theorem/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Alfsen-Shultz+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alfsen-Shultz+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
